# emoji-sentiment-analysis

./: .dockerignore  .gcloudignore  .gitignore  DATA.md  Dockerfile  LICENSE  Makefile  README.md  app.py  cloudbuild.yaml  dev-commands.md  environment.yml  main.py  pyproject.toml  requirements-prod.txt  requirements.txt
docs/: mkdocs.yml
docs/adr/: 0001-numpy-inference-backend.md
docs/docs/: index.md
emoji_sentiment_analysis/: __init__.py  config.py  dataset.py  features.py  plots.py
emoji_sentiment_analysis/modeling/: predict.py  train.py  train_final_model.py
emoji_sentiment_analysis/services/: audit_service.py
models/: sentiment_model.pkl  tfidf_vectorizer.pkl
models/artifacts/: prepared_data.pkl  tfidf_vectorizer.pkl
notebooks/: 1.0-data-ingestion-and-initial-exploration.html  1.0-data-ingestion-and-initial-exploration.ipynb  1.5 Data Cleaning and Validation.html  2.0 Representation, EDA, and Feature Design.html  2.0-processed-data-exploration.html  2.0-processed-data-exploration.ipynb  3.0-data-preparation.html  3.0-data-preparation.ipynb  4.0 Final Model Training and Evaluation.html  4.0 Final Model Training and Evaluation.ipynb  4.0-model-training-and-evaluation.html  4.0-model-training-and-evaluation.ipynb  5.0 Inference Pipeline Reconstruction & Validation.ipynb  5.0-model-inference.html  6.0 Interactive Inference Prototype.html  6.0 Interactive Inference Prototype.ipynb  7.0 Model Explainability & Deep Inference Logging.html  7.0 Model Explainability & Deep Inference Logging.ipynb  Group7-Act1.ipynb  data_exploration.ipynb  inference_app.ipynb  model_training.ipynb
notebooks/archive/: 2.0-processed-data-exploration.html  2.0-processed-data-exploration.ipynb  3.0-data-preparation.html  4.0-model-training-and-evaluation.html  5.0-model-inference.ipynb  6.0 Interactive Inference Prototype.ipynb
references/: DEVELOPMENT.md  dev-commands.md
scripts/: build_features.py
src/: .dockerignore  api.py  main.py
src/emoji_sentiment_analysis/: config.py  dataset.py  features.py
src/models/: sentiment_model.pkl  tfidf_vectorizer.pkl
src/notebooks/: 1.0 Data Ingestion and Initial Exploration .html  1.0 Data Ingestion and Initial Exploration .ipynb  1.0-data-ingestion-and-initial-exploration.ipynb  1.5 Data Cleaning and Validation.ipynb  2.0 Representation, EDA, and Feature Design.html  2.0 Representation, EDA, and Feature Design.ipynb  3.0 Modeling and Evaluation.html  3.0 Modeling and Evaluation.ipynb  3.5 Production Feature Engineering.html  3.5 Production Feature Engineering.ipynb  4.0 Final Model Training and Evaluation.html  4.0 Final Model Training and Evaluation.ipynb  4.5 Model Interpretability & Performance Deep Dive.html  4.5 Model Interpretability & Performance Deep Dive.ipynb  5.0 End-to-End System Validation.html  5.0 End-to-End System Validation.ipynb  5.0 Inference Pipeline Reconstruction & Validation.html
src/reports/: model_health_report.json
src/scripts/: build_features.py  check_model_health.py  export_lite_model.py
templates/: index.html  working-index.html
tests/: test_features.py
(+95 files in other folders)
