[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emoji_sentiment_analysis"
version = "0.0.1"
description = "Hybrid Emoji-based Sentiment Engineering Pipeline"
authors = [
  { name = "Willard Soriano" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10.0"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["emoji_sentiment_analysis*"]

[tool.pytest.ini_options]
# FIX: Pointed to the correct directory inside src
testpaths = ["src/tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"] # Error, Flake8, Isort (import sorting)
# E: Syntax errors and standard conventions
# F: Logic errors (undefined names, etc.)
# I: Keeps your imports perfectly sorted for readability

[tool.ruff.lint.isort]
known-first-party = ["emoji_sentiment_analysis"]